# create_img

./: .gitignore  CMakeLists.txt  CMakeSettings.json
atlas/: main.cpp
circle_img/: main.cpp
clip/: main.cpp
clock/: main.cpp
cmake/: FindSTB_IMG.cmake  Findfreetype.cmake
ft3/: main.cpp
include/: ani_surface.hpp  comm.hpp  ft2pp.hpp  sundry.hpp  surface.hpp
src/: comm.cpp
test_ft2/: main.cpp
